dev(documents): full-screen images added to deploy

--- a/client/components/documents/documents.html
+++ b/client/components/documents/documents.html
@@ -49,7 +49,7 @@
                                 <span class="corner"></span>
                                 <a ng-href="{{image.preview[0].url}}" data-gallery="">
                                 <div class="image">
-                                    <img alt="image" class="img-responsive" ng-src="{{image.preview[0].url}}"></img>
+                                    <img alt="image" class="img-responsive" ng-src="{{image.thumbnail[0].url}}"></img>
                                 </div>
                                 <div class="file-name">
                                     {{image.preview[0].name}}
