fix(landing): Fixes scrollspy

--- a/client/css/ourstyle.css
+++ b/client/css/ourstyle.css
@@ -52,7 +52,7 @@
   font-size: 20px;
   margin-top: 20px;
   font-weight: 200;
-
+}
 .row.event {
   padding: 5px;
 }
@@ -333,7 +333,7 @@ cursor:default!important;
   margin:20px;
 }
 .dashboard-todo-button {
-  margin-bottom:
+  margin-bottom: 20px;
 }
 .dashboard-team-select {
   padding-top:5px!important;
